Updated week2 execises

--- a/Ex.Data analysis and visualisation-solution.ipynb
+++ b/Ex.Data analysis and visualisation-solution.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download utils.py to working directory\n",
+    "import urllib.request\n",
+    "urllib.request.urlretrieve('https://raw.githubusercontent.com/ML-Challenge/week2-data-analysis/master/utils.py', 'utils.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import utils\n",
+    "# We'll be using this module throughout the lesson\n",
+    "import utils\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "dc": {
      "key": "3"
@@ -409,7 +439,7 @@
     "\n",
     "For the `decade column`, 1953 should become 1950, for example. Calculating this column is a bit tricky, but try to see if you can solve it using the np.floor function.\n",
     "\n",
-    "By setting `as_index=False`, you make sure that both the grouping variable and the calculated mean are included in the resulting DataFrame."
+    "By setting `as_index=False`, you make sure that both the grouping variable and the calculated mean are included in the resulting DataFrame. You can find the documentation for `groupby` [here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html)"
    ]
   },
   {
@@ -1487,7 +1517,6 @@
     "dc": {
      "key": "59"
     },
-    "scrolled": false,
     "tags": [
      "sample_code"
     ]
@@ -1830,11 +1859,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "**[Week 2 - Data Analysis and Visualisation](https://radu-enuca.gitbook.io/ml-challenge/data-analysis-and-visualisation)**\n",
+    "\n",
+    "*Have questions or comments? Visit the ML Challenge Mattermost Channel.*"
+   ]
   }
  ],
  "metadata": {
@@ -1899,5 +1931,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
