--- a/Ex.Data analysis and visualisation.ipynb
+++ b/Ex.Data analysis and visualisation.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download utils.py to working directory\n",
+    "import urllib.request\n",
+    "urllib.request.urlretrieve('https://raw.githubusercontent.com/ML-Challenge/week2-data-analysis/master/utils.py', 'utils.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import utils\n",
+    "# We'll be using this module throughout the lesson\n",
+    "import utils\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "dc": {
      "key": "3"
@@ -35,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "3"
@@ -93,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "10"
@@ -148,12 +178,12 @@
     "\n",
     "For the `decade column`, 1953 should become 1950, for example. Calculating this column is a bit tricky, but try to see if you can solve it using the np.floor function.\n",
     "\n",
-    "By setting `as_index=False`, you make sure that both the grouping variable and the calculated mean are included in the resulting DataFrame."
+    "By setting `as_index=False`, you make sure that both the grouping variable and the calculated mean are included in the resulting DataFrame. You can find the documentation for `groupby` [here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "17"
@@ -208,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "24"
@@ -267,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "31"
@@ -321,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "38"
@@ -371,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "45"
@@ -430,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "52"
@@ -487,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "59"
@@ -538,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "66"
@@ -588,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "73"
@@ -601,6 +631,16 @@
    "source": [
     "# The name of the youngest winner of the Nobel Prize as of 2016\n",
     "youngest_winner = '...'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "**[Week 2 - Data Analysis and Visualisation](https://radu-enuca.gitbook.io/ml-challenge/data-analysis-and-visualisation)**\n",
+    "\n",
+    "*Have questions or comments? Visit the ML Challenge Mattermost Channel.*"
    ]
   }
  ],
@@ -666,5 +706,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
