--- a/Ex.Data analysis and visualisation.ipynb
+++ b/Ex.Data analysis and visualisation.ipynb
@@ -26,8 +26,7 @@
    "source": [
     "# Import utils\n",
     "# We'll be using this module throughout the lesson\n",
-    "import utils\n",
-    "import numpy as np"
+    "import utils"
    ]
   },
   {
