add link to solutions notebook

--- a/Ex.Data analysis and visualisation.ipynb
+++ b/Ex.Data analysis and visualisation.ipynb
@@ -636,6 +636,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Solutions\n",
+    "\n",
+    "If you need help with the execises, take a peek at the solutions notebook - [Week 2 Solutions](https://github.com/ML-Challenge/week2-data-analysis/blob/master/Ex.Data%20analysis%20and%20visualisation-solution.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "**[Week 2 - Data Analysis and Visualisation](https://radu-enuca.gitbook.io/ml-challenge/data-analysis-and-visualisation)**\n",
     "\n",
