updated text cells

--- a/Ex.Data analysis and visualisation-solution.ipynb
+++ b/Ex.Data analysis and visualisation-solution.ipynb
@@ -45,10 +45,9 @@
     ]
    },
    "source": [
-    "## 1. The most Nobel of Prizes\n",
-    "<p><img style=\"float: right;margin:5px 20px 5px 1px; max-width:250px\" src=\"https://s3.amazonaws.com/assets.datacamp.com/production/project_441/img/Nobel_Prize.png\"></p>\n",
-    "<p>The Nobel Prize is perhaps the world's most well known scientific award. Except for the honor, prestige and substantial prize money the recipient also gets a gold medal showing Alfred Nobel (1833 - 1896) who established the prize. Every year it's given to scientists and scholars in the categories chemistry, literature, physics, physiology or medicine, economics, and peace. The first Nobel Prize was handed out in 1901, and at that time the Prize was very Eurocentric and male-focused, but nowadays it's not biased in any way whatsoever. Surely. Right?</p>\n",
-    "<p>Well, we're going to find out! The Nobel Foundation has made a dataset available of all prize winners from the start of the prize, in 1901, to 2016. Let's load it in and take a look.</p>"
+    "## 1. The Nobel Prizes\n",
+    "<p>The Nobel Prize is perhaps the world's most well known scientific award. Except for the honor, prestige and substantial prize money the recipient also gets a gold medal showing Alfred Nobel (1833 - 1896) who established the prize. Every year it's given to scientists and scholars in the categories chemistry, literature, physics, physiology or medicine, economics, and peace. </p>\n",
+    "<p>The Nobel Foundation has made a dataset available of all prize winners from the start of the prize, in 1901, to 2016. Let's load it in and take a look.</p>"
    ]
   },
   {
@@ -323,7 +322,7 @@
    },
    "source": [
     "## 2. So, who gets the Nobel Prize?\n",
-    "<p>Just looking at the first couple of prize winners, or Nobel laureates as they are also called, we already see a celebrity: Wilhelm Conrad Röntgen, the guy who discovered X-rays. And actually, we see that all of the winners in 1901 were guys that came from Europe. But that was back in 1901, looking at all winners in the dataset, from 1901 to 2016, which sex and which country is the most commonly represented? </p>\n",
+    "<p>Just looking at the first couple of prize winners, or Nobel laureates as they are also called, we already see a celebrity: Wilhelm Conrad Röntgen, who discovered X-rays. And actually, we see that all of the winners in 1901 were European men. But that was back in 1901, looking at all winners in the dataset, from 1901 to 2016, which sex and which country is the most commonly represented? </p>\n",
     "<p>(For <em>country</em>, we will use the <code>birth_country</code> of the winner, as the <code>organization_country</code> is <code>NaN</code> for all shared Nobel Prizes.)</p>"
    ]
   },
@@ -337,7 +336,7 @@
     "* Count and display the number of prizes for each sex using the `value_counts()` method.\n",
     "* Count the number of prizes for each `birth_country` using `value_counts()` and show the top 10. **Do not use display()**\n",
     "\n",
-    "Why `display()` over `print()`? Try them both out for yourself. You'll find that the output of display() is prettier. :)"
+    "Why `display()` over `print()`? Try them both out for yourself."
    ]
   },
   {
@@ -604,7 +603,7 @@
     "* Use seaborn to plot `prop_usa_winners` with `decade` on the x-axis and `usa_born_winner` on the y-axis as an `sns.lineplot`. Asign the plot to `ax`\n",
     "* Fix the y-scale so that the is shows percentages using `PercentFormatter`\n",
     "\n",
-    "See [here](https://stackoverflow.com/questions/31357611/format-y-axis-as-percent/36319915#36319915) for a Stack Overflow answer on how`PercentFormatter` works and [here](https://seaborn.pydata.org/generated/seaborn.lineplot.html) for the documentation of `lineplot`."
+    "See [here](https://stackoverflow.com/questions/31357611/format-y-axis-as-percent/36319915#36319915) for a Stack Overflow answer on how `PercentFormatter` works and [here](https://seaborn.pydata.org/generated/seaborn.lineplot.html) for the documentation of `lineplot`."
    ]
   },
   {
@@ -880,7 +879,7 @@
    },
    "source": [
     "## 7. Repeat laureates\n",
-    "<p>For most scientists/writers/activists a Nobel Prize would be the crowning achievement of a long career. But for some people, one is just not enough, and few have gotten it more than once. Who are these lucky few? (Having won no Nobel Prize myself, I'll assume it's just about luck.)</p>"
+    "<p>For most scientists/writers/activists a Nobel Prize would be the crowning achievement of a long career. But for some people, one is just not enough, and few have gotten it more than once. Who are these lucky few? </p>"
    ]
   },
   {
@@ -1405,9 +1404,9 @@
     ]
    },
    "source": [
-    "## 8. How old are you when you get the prize?\n",
+    "## 8. Nobel Laureates by age\n",
     "<p>The list of repeat winners contains some illustrious names! We again meet Marie Curie, who got the prize in physics for discovering radiation and in chemistry for isolating radium and polonium. John Bardeen got it twice in physics for transistors and superconductivity, Frederick Sanger got it twice in chemistry, and Linus Carl Pauling got it first in chemistry and later in peace for his work in promoting nuclear disarmament. We also learn that organizations also get the prize as both the Red Cross and the UNHCR have gotten it twice.</p>\n",
-    "<p>But how old are you generally when you get the prize?</p>"
+    "<p>But, generally, how old were the prize winners?</p>"
    ]
   },
   {
@@ -1814,10 +1813,8 @@
     ]
    },
    "source": [
-    "## 11. You get a prize!\n",
-    "<p><img style=\"float: right;margin:20px 20px 20px 20px; max-width:200px\" src=\"https://s3.amazonaws.com/assets.datacamp.com/production/project_441/img/paint_nobel_prize.png\"></p>\n",
-    "<p>Hey! You get a prize for making it to the very end of this notebook! It might not be a Nobel Prize, but I made it myself in paint so it should count for something. But don't despair, Leonid Hurwicz was 90 years old when he got his prize, so it might not be too late for you. Who knows.</p>\n",
-    "<p>Before you leave, what was again the name of the youngest winner ever who in 2014 got the prize for \"[her] struggle against the suppression of children and young people and for the right of all children to education\"?</p>"
+    "## 11. Name of youngest winner!\n",
+    "<p>What was the name of the youngest winner ever who in 2014 got the prize for \"[her] struggle against the suppression of children and young people and for the right of all children to education\"?</p>"
    ]
   },
   {
@@ -1825,7 +1822,7 @@
    "metadata": {},
    "source": [
     "### Task  11:\n",
-    "Assign the name of the youngest winner of a Nobel Prize to `youngest_winner`. The first name will suffice."
+    "Assign the name of the youngest winner of a Nobel Prize to `youngest_winner`."
    ]
   },
   {
