updated text cells

--- a/L1.NumPy.ipynb
+++ b/L1.NumPy.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NumPy is a fundamental Python package to efficiently practice data science. In this lesson you will learn to work with such powerful tools as the NumPy array, and get started with data exploration."
+    "NumPy is a fundamental Python package to efficiently practice data science. In this lesson we will learn to work with such powerful tools as the NumPy array, and get started with data exploration."
    ]
   },
   {
@@ -52,14 +52,14 @@
     }
    },
    "source": [
-    "### Your First NumPy Array"
+    "### Our First NumPy Array"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're going to dive into the world of baseball, along the way, you'll get comfortable with the basics of ```numpy```, a powerful data science package."
+    "We're going to dive into the world of baseball, along the way, we'll get comfortable with the basics of ```numpy```, a powerful data science package."
    ]
   },
   {
