--- a/L2.Matplotlib.ipynb
+++ b/L2.Matplotlib.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With matplotlib, you can create a bunch of different plots in Python. The most basic plot is the line plot. A general recipe is given here:\n",
+    "With matplotlib, we can create a bunch of different plots in Python. The most basic plot is the line plot. A general recipe is given here:\n",
     "\n",
     "```\n",
     "import matplotlib.pyplot as plt\n",
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've built your first line plot, let's start working on the data that professor Hans Rosling used to build his beautiful bubble chart. It was collected in 2007. Two lists are available:\n",
+    "Now that we've built our first line plot, let's start working on the data that professor Hans Rosling used to build his beautiful bubble chart. It was collected in 2007. Two lists are available:\n",
     "\n",
     "* ```life_exp``` which contains the life expectancy for each country and\n",
     "* ```gdp_cap```, which contains the GDP per capita (i.e. per person) for each country expressed in US Dollars."
@@ -513,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's do a similar thing for the x-axis of your world development chart, with the [xticks()](https://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.xticks) function. The tick values ```1000```, ```10000``` and ```100000``` should be replaced by ```1k```, ```10k``` and ```100k```. To this end, two lists have already been created for you: ```tick_val``` and ```tick_lab```."
+    "Let's do a similar thing for the x-axis of our world development chart, with the [xticks()](https://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.xticks) function. The tick values ```1000```, ```10000``` and ```100000``` should be replaced by ```1k```, ```10k``` and ```100k```. To this end, we've creted two lists: ```tick_val``` and ```tick_lab```."
    ]
   },
   {
