updated text cells

--- a/L1.NumPy.ipynb
+++ b/L1.NumPy.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To subset both regular Python lists and ```numpy``` arrays, you can use square brackets:\n",
+    "To subset both regular Python lists and ```numpy``` arrays, we can use square brackets:\n",
     "\n",
     "```\n",
     "x = [4 , 9 , 6, 3, 1]\n",
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For ```numpy``` specifically, you can also use boolean ```numpy``` arrays:\n",
+    "For ```numpy``` specifically, we can also use boolean ```numpy``` arrays:\n",
     "\n",
     "```\n",
     "high = y > 5\n",
@@ -384,14 +384,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```NumPy``` is great for doing vector arithmetic. If you compare its functionality with regular Python lists, however, some things have changed."
+    "```NumPy``` is great for doing vector arithmetic. If we compare its functionality with regular Python lists, however, some things have changed."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First of all, ```numpy``` arrays cannot contain elements with different types. If you try to build such a list, some of the elements' types are changed to end up with a homogeneous list. This is known as type coercion."
+    "First of all, ```numpy``` arrays cannot contain elements with different types. If we try to build such a list, some of the elements' types are changed to end up with a homogeneous list. This is known as type coercion."
    ]
   },
   {
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Your First 2D NumPy Array"
+    "### Our First 2D NumPy Array"
    ]
   },
   {
@@ -730,7 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember how we calculated the Body Mass Index for all baseball players? ```numpy``` was able to perform all calculations element-wise (i.e. element by element). For 2D ```numpy``` arrays this isn't any different! You can combine matrices with single numbers, with vectors, and with other matrices:\n",
+    "Remember how we calculated the Body Mass Index for all baseball players? ```numpy``` was able to perform all calculations element-wise (i.e. element by element). For 2D ```numpy``` arrays this isn't any different! We can combine matrices with single numbers, with vectors, and with other matrices:\n",
     "\n",
     "```\n",
     "import numpy as np\n",
@@ -850,7 +850,7 @@
     "np.median(x)\n",
     "```\n",
     "\n",
-    "After restructuring the data, however, we notice that some height values are abnormally high. Follow the instructions and discover which summary statistic is best suited if you're dealing with so-called outliers."
+    "After restructuring the data, however, we notice that some height values are abnormally high. Follow the instructions and discover which summary statistic is best suited if we're dealing with so-called outliers."
    ]
   },
   {
