added open with colab badge

--- a/Ex.Data analysis and visualisation.ipynb
+++ b/Ex.Data analysis and visualisation.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/Ex.Data%20analysis%20and%20visualisation.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Setup"
    ]
   },
@@ -108,14 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "evalue": "Error: Jupyter cannot be started. Error attempting to locate jupyter: Error: Module 'notebook' not installed.",
-     "output_type": "error"
-    }
-   ],
    "source": [
     "### Task 2:\n",
     "Count up the Nobel Prizes. \n",
