added open with colab badge

--- a/Ex.Data analysis and visualisation-solution.ipynb
+++ b/Ex.Data analysis and visualisation-solution.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/Ex.Data%20analysis%20and%20visualisation-solution.ipynb\" target=\"_parent\\\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/Ex.Data%20analysis%20and%20visualisation-solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
