--- a/L3.Pandas.ipynb
+++ b/L3.Pandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/L3.Pandas.ipynb)"
+    "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/L3.Pandas.ipynb\" target=\"_parent\\\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\"/></a>"
    ]
   },
   {
