--- a/Ex.Data analysis and visualisation.ipynb
+++ b/Ex.Data analysis and visualisation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/Ex.Data%20analysis%20and%20visualisation.ipynb\" target=\"_parent\\\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/Ex.Data%20analysis%20and%20visualisation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\"/></a>"
    ]
   },
   {
