added open with colab badge

--- a/L1.NumPy.ipynb
+++ b/L1.NumPy.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/L1.Numpy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/L1.NumPy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\"/></a>"
    ]
   },
   {
