Updated resources import

--- a/Ex.Data analysis and visualisation.ipynb
+++ b/Ex.Data analysis and visualisation.ipynb
@@ -20,20 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download utils.py to working directory\n",
-    "import urllib.request\n",
-    "urllib.request.urlretrieve('https://raw.githubusercontent.com/ML-Challenge/week2-data-analysis/master/utils.py', 'utils.py')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import utils\n",
-    "# We'll be using this module throughout the lesson\n",
-    "import utils"
+    "# Download lesson resources (datasets)\n",
+    "# Required if you're using Google Colab\n",
+    "!wget \"https://github.com/ML-Challenge/week2-data-analysis/raw/master/resources.zip\"\n",
+    "!unzip -o resources.zip"
    ]
   },
   {
