--- a/L3.Pandas.ipynb
+++ b/L3.Pandas.ipynb
@@ -20,9 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download utils.py to working directory\n",
-    "import urllib.request\n",
-    "urllib.request.urlretrieve('https://raw.githubusercontent.com/ML-Challenge/week2-data-analysis/master/utils.py', 'utils.py')"
+    "# Download lesson resources (datasets)\n",
+    "# Required if you're using Google Colab\n",
+    "!wget \"https://github.com/ML-Challenge/week2-data-analysis/raw/master/resources.zip\"\n",
+    "!unzip -o resources.zip"
    ]
   },
   {
@@ -31,15 +32,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import utils\n",
-    "# We'll be using this module throughout the lesson\n",
+    "# Import utils, we'll be using this module throughout the lesson\n",
     "import utils"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
     "# Intro to pandas DataFrames"
@@ -746,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true,
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
     "# Extracting and transforming data"
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
     "# Exploratory data analysis"
