--- a/L1.NumPy.ipynb
+++ b/L1.NumPy.ipynb
@@ -9,7 +9,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
    "source": [
     "# Setup"
    ]
@@ -20,9 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download utils.py to working directory\n",
-    "import urllib.request\n",
-    "urllib.request.urlretrieve('https://raw.githubusercontent.com/ML-Challenge/week2-data-analysis/master/utils.py', 'utils.py')"
+    "# Download lesson resources (datasets)\n",
+    "# Required if you're using Google Colab\n",
+    "!wget \"https://github.com/ML-Challenge/week2-data-analysis/raw/master/resources.zip\"\n",
+    "!unzip -o resources.zip"
    ]
   },
   {
@@ -31,8 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import utils\n",
-    "# We'll be using this module throughout the lesson\n",
+    "# Import utils, we'll be using this module throughout the lesson\n",
     "import utils"
    ]
   },
@@ -40,14 +42,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NumPy"
+    "NumPy is a fundamental Python package to efficiently practice data science. In this lesson we will learn to work with such powerful tools as the NumPy array, and get started with data exploration."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
    "source": [
-    "NumPy is a fundamental Python package to efficiently practice data science. In this lesson we will learn to work with such powerful tools as the NumPy array, and get started with data exploration."
+    "# NumPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "## Intro to NumPy Arrays"
    ]
   },
   {
@@ -515,7 +528,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## 2D NumPy Arrays"
    ]
@@ -832,7 +847,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## Numpy: Basic Statistics"
    ]
@@ -1176,7 +1193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
