Renamed resources to datasets

--- a/Ex.Data analysis and visualisation-solution.ipynb
+++ b/Ex.Data analysis and visualisation-solution.ipynb
@@ -16,14 +16,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: wget: command not found\n",
+      "Archive:  datasets.zip\n",
+      "  inflating: utils.py                \n",
+      "  inflating: data/pennsylvania2012_turnout.csv  \n",
+      "  inflating: data/tips.csv           \n",
+      "  inflating: data/file_clean.csv     \n",
+      "  inflating: data/messy_stock_data.tsv  \n",
+      "  inflating: data/auto-mpg.csv       \n",
+      "  inflating: data/titanic.csv        \n",
+      "  inflating: data/nobel.csv          \n",
+      "  inflating: data/life_expectancy_at_birth.csv  \n",
+      "  inflating: data/urban_population.csv  \n",
+      "  inflating: data/weather_data_austin_2010.csv  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Download lesson resources (datasets)\n",
+    "# Download lesson datasets\n",
     "# Required if you're using Google Colab\n",
-    "!wget \"https://github.com/ML-Challenge/week2-data-analysis/raw/master/resources.zip\"\n",
-    "!unzip -o resources.zip"
+    "!wget \"https://github.com/ML-Challenge/week2-data-analysis/raw/master/datasets.zip\"\n",
+    "!unzip -o datasets.zip"
    ]
   },
   {
