--- a/Ex.Data analysis and visualisation.ipynb
+++ b/Ex.Data analysis and visualisation.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download lesson resources (datasets)\n",
+    "# Download lesson datasets\n",
     "# Required if you're using Google Colab\n",
-    "!wget \"https://github.com/ML-Challenge/week2-data-analysis/raw/master/resources.zip\"\n",
-    "!unzip -o resources.zip"
+    "!wget \"https://github.com/ML-Challenge/week2-data-analysis/raw/master/datasets.zip\"\n",
+    "!unzip -o datasets.zip"
    ]
   },
   {
